--- a/src/ad_config.ini
+++ b/src/ad_config.ini
@@ -15,14 +15,12 @@
 # ==================================================================================
 
 [influxdb]
-host = ricplt-influxdb.ricplt
+host = influxdb.ricinfra
 port = 8086
 user = admin
 password = 
-path = 
-database = RIC-Test
-measurement = UEReports
-ssl = False 
+database = oran
+table = UEPMReport
 
 [features]
 thpt = DRB.UEThpDl
