--- a/src/id_config.ini
+++ b/src/id_config.ini
@@ -15,7 +15,7 @@
 # ==================================================================================
 
 [influxdb]
-host = influxdb.ricinfra
+host = influxdb.djamel
 port = 8086
 user = admin
 password = 
@@ -23,11 +23,10 @@ database = oran
 table = UEPMReport
 
 [features]
-thpt = DRB.UEThpDl
 rsrp = RF.serving.RSRP
 rsrq = RF.serving.RSRQ
-rssinr  = RF.serving.RSSINR
+rssinr = RF.serving.RSSINR
 prb_usage = RRU.PrbUsedDl
 ue = ue-id
 anomaly = Viavi.UE.anomalies
-a1_param = thp_threshold
+a1_param = rssinr_threshold
